--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h2>WRITE YOUR ESSAY</h2>
-	<input type="text" id="evaluatedText" onkeyup=fun()><br>
+	<textarea type="text" id="evaluatedText" onkeyup=fun()></textarea> <br>
 	<h3 id="wordCount">0</h3>
     <script type="text/javascript" src="./script.js">
 </script>
