--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<h2>WRITE YOUR ESSAY</h2>
 	<textarea type="text" id="evaluatedText" onkeyup=fun() value=""></textarea> <br>
-	<h3 id="wordCount">0</h3>
+	<h3 id="wordCount"></h3>
     <script type="text/javascript" src="./script.js">
 </script>
 
